# project_with_scrapy

./: .gitignore  README.md  pyproject.toml
API/: create_api.py
Pipeline/: load.py
Pipeline/extract/: g1news.json
Pipeline/extract/g1news/: middlewares.py  pipelines.py  settings.py
Pipeline/extract/g1news/spiders/: news.py
