[tool.poetry]
name = "crawler framework"
version = "0.1.0"
description = "Write an application to crawl an online news website and store the data in BigQuery"
authors = ["Debora Ratto <drattodourado@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
scrapy = "^2.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
